--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@mdx-js/loader": "^3.1.1",
+        "@mdx-js/react": "^3.1.1",
+        "@next/mdx": "^16.0.8",
+        "framer-motion": "^10.18.0",
+        "lucide-react": "^0.300.0",
         "next": "14.1.0",
         "react": "^18",
-        "react-dom": "^18",
-        "framer-motion": "^10.18.0",
-        "lucide-react": "^0.300.0"
+        "react-dom": "^18"
     },
     "devDependencies": {
         "@types/node": "^20",
