--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "@mdx-js/loader": "^3.1.1",
         "@mdx-js/react": "^3.1.1",
         "@next/mdx": "^16.0.8",
+        "clsx": "^2.1.1",
         "framer-motion": "^10.18.0",
         "lucide-react": "^0.300.0",
         "next": "14.1.0",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@types/node": "^20",
