--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
         "@mdx-js/loader": "^3.1.1",
         "@mdx-js/react": "^3.1.1",
         "@next/mdx": "^16.0.8",
-        "@react-three/drei": "^9.0.0",
+        "@react-three/drei": "^9.88.0",
         "@react-three/fiber": "^8.16.0",
+        "@react-three/postprocessing": "^3.0.4",
+        "@studio-freight/lenis": "^1.0.42",
+        "@studio-freight/react-lenis": "^0.0.47",
         "@types/three": "^0.182.0",
         "clsx": "^2.1.1",
         "framer-motion": "^10.18.0",
+        "geist": "^1.5.1",
         "lucide-react": "^0.300.0",
         "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^3.4.0",
-        "three": "^0.182.0"
+        "three": "^0.160.0"
     },
     "devDependencies": {
         "@types/node": "^20",
