--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "@mdx-js/loader": "^3.1.1",
         "@mdx-js/react": "^3.1.1",
-        "@next/mdx": "^16.0.8",
+        "@next/mdx": "14.1.0",
         "@react-three/drei": "^9.88.0",
         "@react-three/fiber": "^8.16.0",
         "@react-three/postprocessing": "^3.0.4",
