--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "three": "^0.160.0"
     },
     "devDependencies": {
+        "@playwright/test": "^1.57.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
