--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "clsx": "^2.1.1",
         "framer-motion": "^10.18.0",
         "geist": "^1.5.1",
+        "lenis": "^1.3.16",
         "lucide-react": "^0.300.0",
         "next": "14.1.0",
         "react": "^18",
